# distance-in-practice

./: analyse.ipynb  annotator.py  distance_in_practice.ipynb  downloader.ipynb  main.py  myutil.py  notes.txt  pyproject.toml
maps/: dumyat_explorer.geojson  dumyat_explorer.tif  dumyat_landranger.geojson  dumyat_landranger.tif
