[project]
name = "distance-in-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "supermercado>=0.3.0",
    "ipdb>=0.13.13",
    "ipykernel>=7.1.0",
    "python-dotenv>=1.2.1",
    "uv>=0.9.18",
    "ipyleaflet>=0.20.0",
    "pyproj>=3.7.2",
    "geojson>=3.2.0",
    "shapely>=2.1.2",
    "rasterio>=1.4.4",
    "requests>=2.32.5",
    "pillow>=12.0.0",
    "matplotlib>=3.10.8",
    "morecantile>=7.0.0",
    "ipympl>=0.9.8",
    "pyqt5>=5.15.11",
]

[dependency-groups]
dev = []
